precompiled assets for heroku test

--- a/app/assets/stylesheets/custom/partials/_buck.css.sass
+++ b/app/assets/stylesheets/custom/partials/_buck.css.sass
@@ -1,11 +1,18 @@
+#buck
+	background: orange
+
 #buck-logo
 	display: block
 	margin: 0 auto
 
 #buy
+	text-align: center
+
 	a
 		display: inline-block
-		margin: 0 auto
+		// margin: 0 auto
+		padding: 10px
+		background: yellow
 
 	span
 		display: block
@@ -30,3 +37,6 @@
 
 	&::after
 		left: calc(50% + 20px)
+
+.contact
+	display: inline-block !important
