--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -34,6 +34,9 @@
     <div class="col col-md-8" id="buy">
       <a href="http://buckknives.com" target="_blank">Buy from Buck Knives</a>
       <span id="or">or</span>
+      <span>Buy directly from Tim and Linda Leathers</span>
+      <span class="contact">Email address</span>
+      <span class="contact">Phone number</span>
     </div>
 
   </div>
