--- a/app/assets/stylesheets/custom/partials/_nav.css.sass
+++ b/app/assets/stylesheets/custom/partials/_nav.css.sass
@@ -1,5 +1,6 @@
 @import '../imports.css.sass'
 @import '../../source/_variables.scss'
+@import '../../source/_mixins.scss'
 
 nav
 	margin-bottom: 0 !important
@@ -38,6 +39,7 @@ nav
 			background: orange
 
 			@include x-center
+			@include transition(all 0.3s ease)
 
 		&:hover::after
 			width: 100%
