--- a/app/assets/stylesheets/custom/partials/_story.css.sass
+++ b/app/assets/stylesheets/custom/partials/_story.css.sass
@@ -1,15 +1,3 @@
-section
-	h1
-		text-align: center
-		text-transform: uppercase
-		font-size: 40px
-		font-weight: 700
-		letter-spacing: 4px
-
-	.col
-		float: none !important
-		margin: 0 auto
-
 .circimg
 	display: block
 	width: 300px
@@ -23,3 +11,6 @@ section
 	img
 		width: 100%
 		border-radius: 50%
+
+#story
+	background: red
