added parallax scroll effect on header

--- a/app/assets/stylesheets/custom/partials/_buck.css.sass
+++ b/app/assets/stylesheets/custom/partials/_buck.css.sass
@@ -1,6 +1,10 @@
 #buck
 	background: orange
 
+	p,
+	#knife
+		margin-bottom: 30px
+
 #buck-logo
 	display: block
 	margin: 0 auto
@@ -10,12 +14,13 @@
 
 	a
 		display: inline-block
-		// margin: 0 auto
+		margin-bottom: 30px
 		padding: 10px
 		background: yellow
 
 	span
 		display: block
+		margin-bottom: 30px
 
 #or
 	position: relative
@@ -40,3 +45,5 @@
 
 .contact
 	display: inline-block !important
+	margin: 0 20px
+	margin-bottom: 0 !important
