--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,31 @@
 	
 	<body>
 
-		<header></header>
+		<header id="slide-1">
+
+	    <div class="bcg"
+	        data-center="background-position: 50% 0px;"
+	        data-top-bottom="background-position: 50% 200px;"
+	        data-anchor-target="#slide-1"
+	    >
+
+        <div class="hsContainer">
+
+            <div class="hsContent"
+                data-center="opacity: 1"
+                data-10-top="opacity: 0"
+                data-anchor-target="#slide-1 h2"
+            >
+
+                <h2>Fade out elements before <br>they leave viewport</h2>
+
+            </div>
+
+        </div>
+
+	    </div>
+		
+		</header>
 
 		<nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="500">
 			<div class="container-fluid">
@@ -54,6 +78,18 @@
 		<footer>
 			<p>&copy; 2015 Matt Would Go | <a href="/login">Login</a></p>
 		</footer>
+
+		<script>
+			( function( $ ) {
+			    // Init Skrollr
+			    var s = skrollr.init({
+			        render: function(data) {
+			            //Debugging - Log the current scroll position.
+			            //console.log(data.curTop);
+			        }
+			    });
+			} )( jQuery );
+		</script>
 
 	</body>
 </html>
