styled sections more

--- a/app/assets/stylesheets/custom/partials/_matt.css.sass
+++ b/app/assets/stylesheets/custom/partials/_matt.css.sass
@@ -11,6 +11,8 @@
 	img
 		width: 100%
 		border-radius: 50%
+		box-shadow: 0px 0px 10px 5px #222
 
-#story
-	background: red
+#matt
+	background: #2c3d29
+	color: #d6d68f
