--- a/app/assets/stylesheets/source/_navbar.scss
+++ b/app/assets/stylesheets/source/_navbar.scss
@@ -425,8 +425,8 @@
       &,
       &:hover,
       &:focus {
-        color: $navbar-default-link-active-color;
-        background-color: $navbar-default-link-active-bg;
+        // color: $navbar-default-link-active-color;
+        // background-color: $navbar-default-link-active-bg;
       }
     }
     > .disabled > a {
@@ -482,8 +482,8 @@
           &,
           &:hover,
           &:focus {
-            color: $navbar-default-link-active-color;
-            background-color: $navbar-default-link-active-bg;
+            // color: $navbar-default-link-active-color;
+            // background-color: $navbar-default-link-active-bg;
           }
         }
         > .disabled > a {
@@ -559,8 +559,8 @@
       &,
       &:hover,
       &:focus {
-        color: $navbar-inverse-link-active-color;
-        background-color: $navbar-inverse-link-active-bg;
+        // color: $navbar-inverse-link-active-color;
+        // background-color: $navbar-inverse-link-active-bg;
       }
     }
     > .disabled > a {
@@ -622,8 +622,8 @@
           &,
           &:hover,
           &:focus {
-            color: $navbar-inverse-link-active-color;
-            background-color: $navbar-inverse-link-active-bg;
+            // color: $navbar-inverse-link-active-color;
+            // background-color: $navbar-inverse-link-active-bg;
           }
         }
         > .disabled > a {
