--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,4 +1,4 @@
-<section id="story">
+<section id="matt">
 
   <div class="col col-md-10">
 
@@ -10,13 +10,33 @@
 
     <div class="col col-md-10">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 
   </div>
 
 </section>
 
-<section></section>
+<section id="eddie">
+
+  <div class="col col-md-10">
+
+    <div class="circimg">
+      <img src="http://placehold.it/500x500">
+    </div>
+
+    <h1>Eddie's Story</h1>
+
+    <div class="col col-md-10">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+
+  </div>
+  
+</section>
 
 <section id="buck">
 
@@ -32,11 +52,18 @@
     </div>
 
     <div class="col col-md-8" id="buy">
-      <a href="http://buckknives.com" target="_blank">Buy from Buck Knives</a>
+
+      <a href="http://www.buckknives.com/product/matt-would-go/0245MCSMWG-B/" target="_blank">Buy from Buck Knives</a>
+
       <span id="or">or</span>
+
       <span>Buy directly from Tim and Linda Leathers</span>
-      <span class="contact">Email address</span>
-      <span class="contact">Phone number</span>
+      <span class="contact">dontworry@about.it</span>
+      <span class="contact">XXX XXX XXXX</span>
+
+      <span id="or">or</span>
+
+      <a href="" target="_blank">Donate to the foundation</a>
     </div>
 
   </div>
