--- a/app/assets/stylesheets/custom/partials/_buck.css.sass
+++ b/app/assets/stylesheets/custom/partials/_buck.css.sass
@@ -1,9 +1,17 @@
+@import '../imports.css.sass'
+@import '../../source/_mixins.scss'
+
 #buck
-	background: orange
+	background: #3d3629
+	color: #d6d68f
 
 	p,
 	#knife
 		margin-bottom: 30px
+
+	#knife
+		display: block
+		width: 100%
 
 #buck-logo
 	display: block
@@ -16,7 +24,32 @@
 		display: inline-block
 		margin-bottom: 30px
 		padding: 10px
-		background: yellow
+		position: relative
+		color: #d6d68f
+		text-decoration: none
+		z-index: 9998
+
+		@include transition(all 0.3s ease)
+
+		&::after
+			content: ''
+			display: block
+			width: 0
+			height: 100%
+			background: #d6d68f
+			opacity: 0
+			z-index: -1
+
+			@include xy-center
+			@include transition(all 0.3s ease)
+
+		&:hover
+			color: #3d3629
+
+			&::after
+				width: 100%
+				height: 100%
+				opacity: 1
 
 	span
 		display: block
@@ -31,9 +64,9 @@
 	&::after
 		content: ''
 		display: block
-		width: 100px
+		width: 200px
 		height: 2px
-		background: black
+		background: #d6d68f
 		position: absolute
 		top: calc(50% - 1px)
 
@@ -46,4 +79,3 @@
 .contact
 	display: inline-block !important
 	margin: 0 20px
-	margin-bottom: 0 !important
