--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
 		<%= yield %>
 
 		<footer>
-			<p>&copy; 2015 Matt Would Go | <a href="/login">Login</a></p>
+			<p>&copy; 2015 Matt Would Go | <% if user_signed_in? %><a href="/logout">Logout</a><% else %><a href="/login">Login</a><% end %></p>
 		</footer>
 
 		<script>
