--- a/app/views/application/photos.html.erb
+++ b/app/views/application/photos.html.erb
@@ -4,91 +4,20 @@
 
 		<ul class="row">
 
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://placehold.it/400x300">
-				</div>
-			</li>
+			<% @images.each do |image| %>
 
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://placehold.it/400x300">
-				</div>
-			</li>
+				<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
+					<div class="thumbnail">
+						<%= image_tag image.image(:thumb), large_image: image.image(:large) %>
+						<%= cms_delete( image, "photos/delete") %>
+					</div>
+				</li>
 
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://placehold.it/400x300">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://placehold.it/400x300">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://placehold.it/400x300">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://placehold.it/400x300">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://placehold.it/400x300">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://placehold.it/400x300">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://placehold.it/400x300">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://placehold.it/400x300">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://placehold.it/400x300">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://placehold.it/400x300">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://placehold.it/400x300">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://placehold.it/400x300">
-				</div>
-			</li>
+			<% end %>		     
 
 		</ul>
+
+		<%= cms_upload_url(:image, :image, "Upload New Image", "/photos/add") %>
 
 	</div>
 
@@ -113,7 +42,7 @@
 <script type="text/javascript">
 	$(document).ready(function(){
 		$('li img').on('click',function(){
-	    var src = $(this).attr('src');
+	    var src = $(this).attr('large_image');
 	    var img = '<img src="' + src + '" class="img-responsive"/>';
 	    $('#myModal').modal();
 	    $('#myModal').on('shown.bs.modal', function(){
