--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -51,7 +51,7 @@
 
     <%= cms_upload(@homeImage[2], :image, "Upload New Image") %>
 
-    <h1>Partnership with Buck</h1>
+    <h1>Support the Foundation</h1>
 
     <div class="col col-md-10">
       <p>
