--- a/app/assets/stylesheets/custom/mixins.css.sass
+++ b/app/assets/stylesheets/custom/mixins.css.sass
@@ -8,6 +8,16 @@
 	-o-transform: translateX(-50%)
 	transform: translateX(-50%)
 
+@mixin y-center
+	position: absolute
+	top: 50%
+
+	-ms-transform: translateY(-50%)
+	-webkit-transform: translateY(-50%)
+	-moz-transform: translateY(-50%)
+	-o-transform: translateY(-50%)
+	transform: translateY(-50%)
+
 @mixin xy-center
 	position: absolute
 	left: 50%
