--- a/app/assets/stylesheets/custom/partials/_nav.css.sass
+++ b/app/assets/stylesheets/custom/partials/_nav.css.sass
@@ -35,7 +35,24 @@ nav
 			@media (max-width: 767px)
 				height: 100%
 
-	.navbar-right a
+	.navbar-brand
+		position: relative
+
+		img,
+		span
+			display: inline-block
+
+		img
+			max-height: $navbar-height - 20px
+			left: 15
+
+			@include y-center
+
+		span
+			position: relative
+			left: $navbar-height * 0.8
+
+	a
 		display: table-cell
 		vertical-align: middle
 		// height: 100%
@@ -47,6 +64,10 @@ nav
 
 		@include transition(all 0.3s ease)
 
+		&:hover
+			color: #e7e7e7 !important
+
+	.navbar-right a
 		&::after
 			content: ''
 			display: block
@@ -67,13 +88,9 @@ nav
 				left: 0
 				top: 0
 
-		&:hover
-			color: #e7e7e7 !important
+		&:hover::after
+			@media (min-width: 768px)
+				width: 100%
 
-			&::after
-
-				@media (min-width: 768px)
-					width: 100%
-
-				@media (max-width: 767px)
-					height: 100%
+			@media (max-width: 767px)
+				height: 100%
