--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
 
 		<%= csrf_meta_tags %>
 
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenLite.min.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/easing/EasePack.min.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/CSSPlugin.min.js"></script>
@@ -34,12 +36,16 @@
         <div class="hsContainer">
 
             <div class="hsContent"
-                data-center="opacity: 1"
-                data-10-top="opacity: 0"
-                data-anchor-target="#slide-1 h2"
+                data-center="opacity: 1.5"
+                data--250-top="opacity: 0"
+                data-anchor-target="#slide-1 img"
             >
 
-                <h2>Fade out elements before <br>they leave viewport</h2>
+                <div id="header-logo">
+                	<img src="/assets/logo.png">
+                	<h2>Matt Would Go<br>
+                	<span>LLC</span></h2>
+                </div>
 
             </div>
 
@@ -58,7 +64,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Brand</a>
+					<a class="navbar-brand" href="/home"><img src="/assets/logo.png"><span>Matt Would Go</span></a>
 				</div>
 
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
