--- a/app/assets/stylesheets/custom/partials/_nav.css.sass
+++ b/app/assets/stylesheets/custom/partials/_nav.css.sass
@@ -53,7 +53,7 @@ nav
 			left: $navbar-height * 0.8
 
 	a
-		display: table-cell
+		display: table-cell !important
 		vertical-align: middle
 		// height: 100%
 		padding-top: 0
@@ -70,11 +70,10 @@ nav
 	.navbar-right a
 		&::after
 			content: ''
-			display: block
+			// display: block
 			position: absolute
 			background: #6a7a52
 
-			@include x-center
 			@include transition(all 0.3s ease)
 
 			@media (min-width: 768px)
@@ -82,15 +81,19 @@ nav
 				height: 5px
 				bottom: 0
 
+				@include x-center
+
 			@media (max-width: 767px)
 				width: 5px
 				height: 0
 				left: 0
 				top: 0
 
+				@include y-center
+
 		&:hover::after
 			@media (min-width: 768px)
 				width: 100%
 
 			@media (max-width: 767px)
-				height: 100%
+				height: 75%
