--- a/app/assets/stylesheets/custom/partials/_nav.css.sass
+++ b/app/assets/stylesheets/custom/partials/_nav.css.sass
@@ -29,11 +29,11 @@ nav
 
 		&.active a::after
 
-			@media (min-width: 768px)
+			@media (min-width: $screen-sm)
 				width: 100%
 
-			@media (max-width: 767px)
-				height: 100%
+			@media (max-width: $screen-sm - 1)
+				height: 75%
 
 	.navbar-brand
 		position: relative
@@ -76,14 +76,14 @@ nav
 
 			@include transition(all 0.3s ease)
 
-			@media (min-width: 768px)
+			@media (min-width: $screen-sm)
 				width: 0
 				height: 5px
 				bottom: 0
 
 				@include x-center
 
-			@media (max-width: 767px)
+			@media (max-width: $screen-sm - 1)
 				width: 5px
 				height: 0
 				left: 0
@@ -92,8 +92,8 @@ nav
 				@include y-center
 
 		&:hover::after
-			@media (min-width: 768px)
+			@media (min-width: $screen-sm)
 				width: 100%
 
-			@media (max-width: 767px)
+			@media (max-width: $screen-sm - 1)
 				height: 75%
