--- a/app/views/application/login.html.erb
+++ b/app/views/application/login.html.erb
@@ -40,6 +40,17 @@
 
 				</div>
 
+				<div class="field">
+          <input name="user[remember_me]" type="hidden" value="0"><input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me">
+          <label for="user_remember_me">Remember me</label>
+        </div>
+
+        <div class="actions">
+          <input type="submit" name="commit" value="Log in">
+        </div>
+
+      </div>
+
 			</div>
 
 		</form>
