--- a/app/assets/fonts/fonts.css.scss
+++ b/app/assets/fonts/fonts.css.scss
@@ -6,3 +6,14 @@
       font-url('bootstrap/glyphicons-halflings-regular.ttf') format('truetype'),
       font-url('bootstrap/glyphicons-halflings-regular.svg') format('svg');
 }
+
+@font-face {
+	font-family: 'ElegantIcons';
+	src: font-url('ElegantIcons.eot');
+	src: font-url('ElegantIcons.eot?#iefix') format('embedded-opentype'),
+		font-url('ElegantIcons.woff') format('woff'),
+		font-url('ElegantIcons.ttf') format('truetype'),
+		font-url('ElegantIcons.svg#ElegantIcons') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
