--- a/app/assets/stylesheets/custom/partials/_galleries.css.sass
+++ b/app/assets/stylesheets/custom/partials/_galleries.css.sass
@@ -1,16 +1,16 @@
 .gallery
-	ul
+	.row
 		padding: 0
 		margin: 0
 
-		li
+		.thumbnail
 			list-style: none
 			padding: 12px
 
-			div
-				background: transparent
+		div
+			background: transparent
 
-			img
-				display: block
-				width: 100%
-				cursor: pointer
+		img
+			display: block
+			width: 100%
+			cursor: pointer
