--- a/app/views/application/photos.html.erb
+++ b/app/views/application/photos.html.erb
@@ -2,24 +2,32 @@
 	
 	<div class="container">
 
-		<ul class="row">
+		<!-- <ul class="row"> -->
 
 			<% if @images != nil %>
-
+				<% i = 0 %>
 				<% @images.each do |image| %>
 
-					<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
+					<% if i % 4 == 0 %>
+						<div class="row">
+					<% end %>
+
+					<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
 						<div class="thumbnail">
 							<%= image_tag image.image, large_image: image.image %>
 							<%= cms_delete( image, "photos/delete") %>
 						</div>
-					</li>
+					</div>
+					<% i += 1 %>
 
+					<% if i % 4 == 0 %>
+						</div>
+					<% end %>
 				<% end %>	
 
 			<% end %>
 
-		</ul>
+		<!-- </ul> -->
 
 		<%= cms_upload_url(:image, :image, "Upload New Image", "/photos/add") %>
 
@@ -45,7 +53,7 @@
 
 <script type="text/javascript">
 	$(document).ready(function(){
-		$('li img').on('click',function(){
+		$('.thumbnail img').on('click',function(){
 	    var src = $(this).attr('large_image');
 	    var img = '<img src="' + src + '" class="img-responsive"/>';
 	    $('#myModal').modal();
