--- a/app/views/application/photos.html.erb
+++ b/app/views/application/photos.html.erb
@@ -1,3 +1,8 @@
+<%
+meta title: "Photos - Matt Would Go",
+     description: "This is the photos page."
+%>
+
 <section id="photos" class="gallery">
 	
 	<div class="container">
