--- a/app/views/application/videos.html.erb
+++ b/app/views/application/videos.html.erb
@@ -1,92 +1,15 @@
+<%
+meta title: "Videos - Matt Would Go",
+     description: "This is the videos page."
+%>
+
 <section id="videos" class="gallery">
 	
 	<div class="container">
 
 		<ul class="row">
 
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://img.youtube.com/vi/XgNROudDNDs/hqdefault.jpg">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://img.youtube.com/vi/XgNROudDNDs/hqdefault.jpg">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://img.youtube.com/vi/XgNROudDNDs/hqdefault.jpg">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://img.youtube.com/vi/XgNROudDNDs/hqdefault.jpg">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://img.youtube.com/vi/XgNROudDNDs/hqdefault.jpg">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://img.youtube.com/vi/XgNROudDNDs/hqdefault.jpg">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://img.youtube.com/vi/XgNROudDNDs/hqdefault.jpg">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://img.youtube.com/vi/XgNROudDNDs/hqdefault.jpg">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://img.youtube.com/vi/XgNROudDNDs/hqdefault.jpg">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://img.youtube.com/vi/XgNROudDNDs/hqdefault.jpg">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://img.youtube.com/vi/XgNROudDNDs/hqdefault.jpg">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://img.youtube.com/vi/XgNROudDNDs/hqdefault.jpg">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://img.youtube.com/vi/XgNROudDNDs/hqdefault.jpg">
-				</div>
-			</li>
-
-			<li class="col-lg-3 col-md-3 col-sm-4 col-xs-6 thumb">
-				<div class="thumbnail">
-					<img src="http://img.youtube.com/vi/XgNROudDNDs/hqdefault.jpg">
-				</div>
-			</li>
+			
 
 		</ul>
 
