--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,12 +93,11 @@
 		<script>
 			( function( $ ) {
 			    // Init Skrollr
-			    var s = skrollr.init({
-			        render: function(data) {
-			            //Debugging - Log the current scroll position.
-			            //console.log(data.curTop);
-			        }
-			    });
+			    if(!(/Android|iPhone|iPad|iPod|BlackBerry|Windows Phone/i).test(navigator.userAgent || navigator.vendor || window.opera)){
+				    skrollr.init({
+				        forceHeight: false
+				    });
+					}
 			} )( jQuery );
 		</script>
 
