added matt's bio

--- a/app/assets/stylesheets/custom/partials/_body.css.sass
+++ b/app/assets/stylesheets/custom/partials/_body.css.sass
@@ -2,3 +2,11 @@ body
 	font-family: 'Raleway'
 	position: relative
 	height: auto !important
+
+	a,
+	button
+		outline: none !important
+
+	input,
+	textarea
+		color: #000
