--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,7 +78,7 @@
 						<li id="eddie-link"><a>Eddie</a></li>
 						<li id="buck-link"><a>Support</a></li>
 						<li id="photo-link"><a href="/photos">Photos</a></li>
-						<li id="video-link"><a href="/videos">Videos</a></li>
+						<!-- <li id="video-link"><a href="/videos">Videos</a></li> -->
 					</ul>
 				</div>
 			</div>
