--- a/app/assets/stylesheets/custom/partials/_matt.css.sass
+++ b/app/assets/stylesheets/custom/partials/_matt.css.sass
@@ -8,10 +8,13 @@
 	border-radius: 50%
 	overflow: hidden
 
-	img
+	div
 		width: 100%
+		height: 100%
 		border-radius: 50%
 		box-shadow: 0px 0px 10px 5px #222
+		background-position: center
+		background-size: cover
 
 #matt
 	background: #2c3d29
